# diesel_example

./: Cargo.toml  README.md  diesel.toml
migrations/2024-09-23-094027_create_users/: up.sql
src/: main.rs  models.rs  repository.rs  schema.rs
